# xcoinalgo

./: .env.example  .gitignore  ARCHITECTURE_IMPROVEMENT_PLAN.md  BACKEND_DEPLOYMENT.md  BACKEND_GUIDE.md  BACKTEST_PIPELINE_FIX.md  BALANCE_CHECK_FIX.md  BALANCE_FIX_COMPLETE.md  BOT_SETUP_INSTRUCTIONS.md  BULK_OPERATIONS_GUIDE.md  BULK_USER_CREATION.md  CHART_FIX.md  CHART_FIXES_COMPLETE.md  COINDCX_CLIENT_IMPLEMENTATION.md  COLLABORATION_PLAN.md  CRITICAL_CONNECTION_INFO.md  CRYPTO_BOT.csv  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DOCS_SQUARE_OFF_STRATEGY.md  EC2_SETUP_GUIDE.md  EMAIL_MONITORING_DEPLOYMENT.md  FRONTEND_GUIDE.md  FUTURES_ONLY_FIX.md  MARGIN_AND_BALANCE_FIX.md  MARGIN_FIX_COMPLETE.md  PLATFORM_SUMMARY.md  README.md  REFACTORING_NOTES.md  RESEARCHER_ONBOARDING.md  SDK_DISTRIBUTION_GUIDE.md  SDK_VERSIONING_GUIDE.md  STRATEGY_DEVELOPMENT_GUIDE.md  STRATEGY_REQUEST.md  SYSTEM_ARCHITECTURE.md  TECHNICAL_DOCUMENTATION.md  TESTING_GUIDE.md  TLDR_FOR_DEVELOPERS.md  VERCEL_DEPLOYMENT_GUIDE.md  (+13 more)
backend/: .env.example  Dockerfile  IMPLEMENTATION_STATUS.md  README_PNL_REPORT.md  SANDBOX_SCHEMA_ADDITION.md  SANDBOX_VALIDATION_README.md  coindcx_pnl_report.py  package-lock.json  package.json  test-wallet-api.ts  tsconfig.json
backend/docker/strategy-sandbox/: .dockerignore  Dockerfile  docker-compose.yml
backend/lib/: event-bus.ts  redis-client.ts
backend/prisma/: schema.prisma  seed.ts
backend/python/: MULTI_RESOLUTION_GUIDE.md  VALIDATION_GUIDE.md  batch_backtest.py  live_trader_executor.py  livetrader_backtest_executor.py  log_analyzer.py  multi_tenant_wrapper.py  quick_validator.py  requirements.txt  sandbox_executor.py  strategy_executor.py  strategy_executor_lib.py  strategy_helpers.py  strategy_requirements.txt  strategy_runner.py  strategy_structure_validator.py  task_queue.py  test_batch_backtest.py  test_worker_infrastructure.py  worker.py
backend/reports/: strategy-overview-cmh7lyx0y0000p91hb96tpbl6-2025-11-17.csv  strategy-subscribers-cmh7lyx0y0000p91hb96tpbl6-2025-11-17.csv
backend/scripts/: MONITORING_SETUP.md  README-BULK-SUBSCRIBE.md  add-margin-column.sql  bulk-subscribe-from-csv.ts  bulk-update-strategies-public.ts  clear-strategies.ts  migrate-margin.ts  setup-uv.sh  system-monitor.sh
backend/services/: backtest-engine.ts  coindcx-client.ts  order-manager.ts
backend/services/strategy-execution/: execution-coordinator.ts  settings-service.ts  subscription-service.ts
backend/src/: index.ts  simple-server.ts
backend/src/config/: passport.ts
backend/src/lib/: time-utils.ts
backend/src/middleware/: auth.ts  errorHandler.ts  validation-rate-limiter.ts
backend/src/routes/: admin.ts  auth.ts  backtest-progress.ts  backtest.ts  bot.ts  broker.ts  client.ts  execution-audit.ts  logs.ts  market-data.ts  marketplace.ts  positions.ts  settings.ts  strategies.ts.disabled  strategy-daily-report.ts  strategy-execution.ts  strategy-invite.ts  strategy-upload.ts  strategy-upload.ts.disabled  strategy.ts.disabled  trade-cycles.ts  webhooks.ts
backend/src/scripts/: backtest-and-update-strategy.ts  check-execution-errors.ts  check-execution-history.ts  check-strategy-status.ts  check-trades.ts  export-strategies-users.ts  generate-pnl-report.ts  generate-strategy-report.ts  list-subscriptions.ts  sync-strategy-configs.ts  update-usdt-inr-rate.py  update-usdt-inr-rate.ts
backend/src/services/: backtest-engine.ts  backtest-progress-tracker.ts  coindcx-client.ts  docker-sandbox.ts  dockerProcessManager.ts  (+13 more)
backend/workers/: strategy-scheduler.ts
cli/: .gitignore  README.md  STATUS.md  USER_GUIDE.md  pyproject.toml  setup.py
cli/sol-hybrid-strategy/: README.md  config.json  requirements.txt  strategy.py
cli/xcoin_cli/: __init__.py  api_client.py  backtest.py  backtest_schema.py  cli.py  config.py  constants.py  local_registry.py  validators.py
cli/xcoin_cli/commands/: __init__.py  backtest.py  delete.py  deploy.py  init.py  link_git.py  list.py  local.py  login.py  logs.py  remove.py  restore.py  status.py  sync.py  test_cmd.py  unpublish.py  validate.py
cli/xcoin_cli/templates/: FRONTEND_SCHEMA.md  README_BACKTEST.md  __init__.py  config_livetrader.json.template  config_template.json  example_custom_backtest_strategy.py  gitignore_template  readme_template.md  requirements_livetrader.txt.template  requirements_template.txt  strategy_livetrader.py.template  strategy_template.py  test_template.py
data_collection/: README.md  ecosystem.tick_collector.config.js  tick_collector.py
frontend/: Dockerfile  build_log.txt  next.config.ts  package-lock.json  package.json
python-sdk/: CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  PUBLISHING_GUIDE.md  README.md  SDK_QUICKSTART.md  pyproject.toml  requirements.txt  setup.py
python-sdk/.github/workflows/: publish.yml
python-sdk/crypto_strategy_sdk/: __init__.py  backtesting.py  base_strategy.py  client.py  indicators.py  risk_management.py  strategy_config.py  utils.py  validation.py
python-sdk/crypto_strategy_sdk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
python-sdk/examples/: cdcx_50_v1_refactored.py
python-sdk/xcoinalgo_strategy_sdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: install_xcoin_cli.ps1  install_xcoin_cli.sh
strategy-runner/: Dockerfile  package-lock.json  package.json  test_deployment.json
strategy-runner-service/: Dockerfile  docker-compose.yml  main.py  models.py  requirements.txt  strategy_manager.py
strategy-runner/python/: requirements.txt  strategy_executor.py
strategy-runner/src/: index.ts  strategyManager.ts
strategy-templates/: base_strategy.py  example_config.json  requirements.txt  test_strategy.py  test_strategy_config.json
xcoinalgo-strategy-sdk/: .gitignore  API_REFERENCE.md  LICENSE  MANIFEST.in  README.md  STRATEGY_GUIDE.md  pyproject.toml  requirements.txt  setup.py
xcoinalgo-strategy-sdk/examples/: macd_strategy.py  rsi_strategy.py  sma_crossover.py
xcoinalgo-strategy-sdk/tests/: __init__.py  test_base.py
xcoinalgo-strategy-sdk/xcoinalgo/: __init__.py  base.py  models.py  testing.py
(+151 files in other folders)
